# dstools

./: .gitignore  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  history_of_scipy.rst  index.rst  intro.rst  numpy.rst  numpy_index.rst  numpy_overview.rst  pandas.rst  pandas_index.rst  pandas_internals.rst  pandas_overview.rst  scipy.rst
dstools/: __init__.py  version.py
