[metadata]
name = DSTools Analysis
author = Harrison Feng
author_email = feng.harrison@gmail.com
summary = DSTools is a project that summarizes data science tools and libaries and make simple analysis from technical point of view.
description-file = README.md
license = Apache License, Version 2.0
home-page =  N/A
classifier =
    Topic :: Utilities
    Environment :: Linux Operating System
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    bigdataex
data_files =

[pbr]
warnerrors = True

[wheel]
universal = 1

[build_sphinx]
source_dir = docs/source
build_dir = docs/build
all_files = 1
